--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 
 html {
     scroll-behavior: smooth;
-}
-div
-.title h1{
-    border: 5px solid blue;
+h1, h2{
+    text-align: center;
 }
 .gallery {
 
@@ -13,14 +11,12 @@ div
     gap: 10px;
 }
 
-.form-container {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+div {
+    .form-container {
 
-    text-align: center;
+    
+        text-align: center;
+    }
 }
 figure {
     width: 200px;
@@ -31,4 +27,7 @@ figcaption {
 }
 form-container {
     align-items: center;
+}
+body {
+    background-color: lightblue;
 }
